# pry

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
plugin/pry_agent_bridge/: __init__.py  bridge.py  paths.py
skills/pry/: SKILL.md
skills/pry/agents/: openai.yaml
skills/pry/reference/: pwndbg.md
src/pry/: __init__.py  cli.py  output.py  paths.py  transport.py  version.py
tests/: test_bridge.py  test_cli.py  test_named_instances.py  test_output.py  test_transport.py  test_version_sync.py
